update from main repo

--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -9,16 +9,15 @@
 
     [buildPlans.iosevka-ot-dz.variants.design]
     capital-b = "more-asymmetric"
-    capital-g = "toothless-corner"
+    capital-g = "toothless-corner-hooked"
     capital-i = "short-serifed"
     capital-j = "serifed"
     capital-m = "hanging"
     capital-q = "straight"
-    a = "doublestorey"
     b = "toothed"
 	d = "toothed"
     f = "flat-hook"
-    g = "doublestorey"
+    g = "double-storey"
     i = "serifed"
     j = "flat-hook-serifed"
     l = "serifed-flat-tailed"
@@ -27,7 +26,7 @@
     q = "straight"
     t = "flat-hook"
     # zero = "long-dotted"
-    zero = "dotted"
+    # zero = "dotted"
     one = "nobase"
     three = "twoarcs"
     four = "closed"
@@ -44,10 +43,12 @@
     at = "threefold"
     dollar = "open"
     percent = "dots"
+    zero = "unslashed-oval"
+    question = "corner-flat-hooked"
 
     [buildPlans.iosevka-ot-dz.variants.italic]
     capital-q = "straight"
-    a = "doublestorey-toothless-corner"
+    a = "double-storey-toothless-corner"
 	b = "toothless-corner"
 	d = "toothless-corner"
     e = "rounded"
@@ -84,16 +85,15 @@
 
     [buildPlans.iosevka-ot-dz-mono.variants.design]
     capital-b = "more-asymmetric"
-    capital-g = "toothless-corner"
+    capital-g = "toothless-corner-hooked"
     capital-i = "short-serifed"
     capital-j = "serifed"
     capital-m = "hanging"
     capital-q = "straight"
-    a = "doublestorey"
     b = "toothed"
 	d = "toothed"
     f = "flat-hook"
-    g = "doublestorey"
+    g = "double-storey"
     i = "serifed"
     j = "flat-hook-serifed"
     l = "serifed-flat-tailed"
@@ -102,7 +102,7 @@
     q = "straight"
     t = "flat-hook"
     # zero = "long-dotted"
-    zero = "dotted"
+    # zero = "dotted"
     one = "nobase"
     three = "twoarcs"
     four = "closed"
@@ -119,10 +119,12 @@
     at = "threefold"
     dollar = "open"
     percent = "dots"
+    zero = "unslashed-oval"
+    question = "corner-flat-hooked"
 
     [buildPlans.iosevka-ot-dz-mono.variants.italic]
     capital-q = "straight"
-    a = "doublestorey-toothless-corner"
+    a = "double-storey-toothless-corner"
     b = "toothless-corner"
 	d = "toothless-corner"
     e = "rounded"
@@ -161,16 +163,15 @@
 
     [buildPlans.iosevka-ot-dz-term-lig.variants.design]
     capital-b = "more-asymmetric"
-    capital-g = "toothless-corner"
+    capital-g = "toothless-corner-hooked"
     capital-i = "short-serifed"
     capital-j = "serifed"
     capital-m = "hanging"
     capital-q = "straight"
-    a = "doublestorey"
     b = "toothed"
 	d = "toothed"
     f = "flat-hook"
-    g = "doublestorey"
+    g = "double-storey"
     i = "serifed"
     j = "flat-hook-serifed"
     l = "serifed-flat-tailed"
@@ -179,7 +180,7 @@
     q = "straight"
     t = "flat-hook"
     # zero = "long-dotted"
-    zero = "dotted"
+    # zero = "dotted"
     one = "nobase"
     three = "twoarcs"
     four = "closed"
@@ -196,10 +197,12 @@
     at = "threefold"
     dollar = "open"
     percent = "dots"
+    zero = "unslashed-oval"
+    question = "corner-flat-hooked"
 
     [buildPlans.iosevka-ot-dz-term-lig.variants.italic]
     capital-q = "straight"
-    a = "doublestorey-toothless-corner"
+    a = "double-storey-toothless-corner"
     b = "toothless-corner"
 	d = "toothless-corner"
     e = "rounded"
