--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -123,7 +123,7 @@
     at = "threefold"
     dollar = "open"
     percent = "dots"
-    zero = "unslashed-oval"
+    zero = "slashed-oval"
     question = "corner-flat-hooked"
 
     [buildPlans.iosevka-ot-dz-mono.variants.italic]
@@ -203,7 +203,7 @@
     at = "threefold"
     dollar = "open"
     percent = "dots"
-    zero = "unslashed-oval"
+    zero = "slashed-oval"
     question = "corner-flat-hooked"
 
     [buildPlans.iosevka-ot-dz-term-lig.variants.italic]
