refactor: change oval zero to dotted

--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -8,62 +8,75 @@
     inherits = "ss20"
 
     [buildPlans.iosevka-ot-dz.variants.design]
+    capital-a = "curly"
     capital-b = "more-asymmetric-unilateral-motion-serifed"
     capital-d = "standard-unilateral-motion-serifed"
-    # capital-b = "more-asymmetric"
-    capital-g = "toothless-corner-hooked"
+    capital-g = "toothed-serifless-hooked"
     capital-i = "short-serifed"
     capital-j = "serifed"
+    capital-k = "curly"
     capital-m = "hanging"
+    capital-n = "asymmetric"
     capital-q = "straight"
+    capital-r = "curly"
+    capital-v = "curly"
+    capital-w = "curly"
+    capital-x = "curly"
+    capital-y = "curly"
     b = "toothed"
-	d = "toothed"
     f = "flat-hook"
     g = "double-storey"
-    i = "serifed"
     j = "flat-hook-serifed"
+    k = "curly"
     l = "serifed-flat-tailed"
-    n = "straight"
-    p = "eared"
-    q = "straight"
     t = "flat-hook"
-    # zero = "long-dotted"
-    # zero = "dotted"
+    u = "toothed"
+    v = "curly"
+    w = "curly"
+    x = "curly"
+    y = "curly"
+    z = "curly"
+    turn-v = "curly"
+    capital-gamma = "standard"
+    lambda = "curly"
+    cyrl-capital-u = "curly"
+    zero = "slashed-oval"
+    # zero = "dotted-oval"
     one = "nobase"
-    three = "twoarcs"
+    two = "curly-neck"
     four = "closed"
+    five = "oblique-upper-left-bar"
     six = "closed-contour"
-    seven = "noserif"
     eight = "two-circles"
     nine = "closed-contour"
-    asterisk = "hexhigh"
+    tilde = "low"
+    asterisk = "low"
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
-    number-sign = "upright-open"
+    number-sign = "upright"
     ampersand = "upper-open"
-    at = "threefold"
     dollar = "open"
     percent = "dots"
-    zero = "slashed-oval"
+    bar = "natural-slope"
+    lig-ltgteq = "flat"
     question = "corner-flat-hooked"
 
     [buildPlans.iosevka-ot-dz.variants.italic]
-    capital-q = "straight"
     a = "double-storey-toothless-corner"
-	b = "toothless-corner"
-	d = "toothless-corner"
+    b = "toothless-corner"
+    d = "toothless-corner"
     e = "rounded"
     f = "flat-hook-extended"
-    i = "serifed"
-    j = "flat-hook-serifed"
-    k = "curly"
-    m = "earless-rounded-double-arch-tailed"
-    n = "earless-corner-tailed"
+    g = "earless-corner"
+    i = "serifed-flat-tailed"
+    l = "serifed-flat-tailed"
+    m = "earless-corner-double-arch"
+    n = "earless-corner-straight"
     p = "earless-corner"
     q = "earless-corner"
-    u = "tailed"
-    y = "curly-turn"
+    r = "earless-corner"
+    u = "toothless-corner"
 
     [buildPlans.iosevka-ot-dz.slopes]
     upright = "normal"
@@ -86,62 +99,75 @@
     inherits = "ss20"
 
     [buildPlans.iosevka-ot-dz-mono.variants.design]
+    capital-a = "curly"
     capital-b = "more-asymmetric-unilateral-motion-serifed"
     capital-d = "standard-unilateral-motion-serifed"
-    # capital-b = "more-asymmetric"
-    capital-g = "toothless-corner-hooked"
+    capital-g = "toothed-serifless-hooked"
     capital-i = "short-serifed"
     capital-j = "serifed"
+    capital-k = "curly"
     capital-m = "hanging"
+    capital-n = "asymmetric"
     capital-q = "straight"
+    capital-r = "curly"
+    capital-v = "curly"
+    capital-w = "curly"
+    capital-x = "curly"
+    capital-y = "curly"
     b = "toothed"
-	d = "toothed"
     f = "flat-hook"
     g = "double-storey"
-    i = "serifed"
     j = "flat-hook-serifed"
+    k = "curly"
     l = "serifed-flat-tailed"
-    n = "straight"
-    p = "eared"
-    q = "straight"
     t = "flat-hook"
-    # zero = "long-dotted"
-    # zero = "dotted"
+    u = "toothed"
+    v = "curly"
+    w = "curly"
+    x = "curly"
+    y = "curly"
+    z = "curly"
+    turn-v = "curly"
+    capital-gamma = "standard"
+    lambda = "curly"
+    cyrl-capital-u = "curly"
+    zero = "slashed-oval"
+    # zero = "dotted-oval"
     one = "nobase"
-    three = "twoarcs"
+    two = "curly-neck"
     four = "closed"
+    five = "oblique-upper-left-bar"
     six = "closed-contour"
-    seven = "noserif"
     eight = "two-circles"
     nine = "closed-contour"
-    asterisk = "hexhigh"
+    tilde = "low"
+    asterisk = "low"
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
-    number-sign = "upright-open"
+    number-sign = "upright"
     ampersand = "upper-open"
-    at = "threefold"
     dollar = "open"
     percent = "dots"
-    zero = "slashed-oval"
+    bar = "natural-slope"
+    lig-ltgteq = "flat"
     question = "corner-flat-hooked"
 
     [buildPlans.iosevka-ot-dz-mono.variants.italic]
-    capital-q = "straight"
     a = "double-storey-toothless-corner"
     b = "toothless-corner"
-	d = "toothless-corner"
+    d = "toothless-corner"
     e = "rounded"
     f = "flat-hook-extended"
-    i = "serifed"
-    j = "flat-hook-serifed"
-    k = "curly"
-    m = "earless-rounded-double-arch-tailed"
-    n = "earless-corner-tailed"
+    g = "earless-corner"
+    i = "serifed-flat-tailed"
+    l = "serifed-flat-tailed"
+    m = "earless-corner-double-arch"
+    n = "earless-corner-straight"
     p = "earless-corner"
     q = "earless-corner"
-    u = "tailed"
-    y = "curly-turn"
+    r = "earless-corner"
+    u = "toothless-corner"
 
     [buildPlans.iosevka-ot-dz-mono.slopes]
     upright = "normal"
@@ -166,62 +192,75 @@
     inherits = "ss20"
 
     [buildPlans.iosevka-ot-dz-term-lig.variants.design]
+    capital-a = "curly"
     capital-b = "more-asymmetric-unilateral-motion-serifed"
     capital-d = "standard-unilateral-motion-serifed"
-    # capital-b = "more-asymmetric"
-    capital-g = "toothless-corner-hooked"
+    capital-g = "toothed-serifless-hooked"
     capital-i = "short-serifed"
     capital-j = "serifed"
+    capital-k = "curly"
     capital-m = "hanging"
+    capital-n = "asymmetric"
     capital-q = "straight"
+    capital-r = "curly"
+    capital-v = "curly"
+    capital-w = "curly"
+    capital-x = "curly"
+    capital-y = "curly"
     b = "toothed"
-	d = "toothed"
     f = "flat-hook"
     g = "double-storey"
-    i = "serifed"
     j = "flat-hook-serifed"
+    k = "curly"
     l = "serifed-flat-tailed"
-    n = "straight"
-    p = "eared"
-    q = "straight"
     t = "flat-hook"
-    # zero = "long-dotted"
-    # zero = "dotted"
+    u = "toothed"
+    v = "curly"
+    w = "curly"
+    x = "curly"
+    y = "curly"
+    z = "curly"
+    turn-v = "curly"
+    capital-gamma = "standard"
+    lambda = "curly"
+    cyrl-capital-u = "curly"
+    zero = "slashed-oval"
+    # zero = "dotted-oval"
     one = "nobase"
-    three = "twoarcs"
+    two = "curly-neck"
     four = "closed"
+    five = "oblique-upper-left-bar"
     six = "closed-contour"
-    seven = "noserif"
     eight = "two-circles"
     nine = "closed-contour"
-    asterisk = "hexhigh"
+    tilde = "low"
+    asterisk = "low"
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
-    number-sign = "upright-open"
+    number-sign = "upright"
     ampersand = "upper-open"
-    at = "threefold"
     dollar = "open"
     percent = "dots"
-    zero = "slashed-oval"
+    bar = "natural-slope"
+    lig-ltgteq = "flat"
     question = "corner-flat-hooked"
 
     [buildPlans.iosevka-ot-dz-term-lig.variants.italic]
-    capital-q = "straight"
     a = "double-storey-toothless-corner"
     b = "toothless-corner"
-	d = "toothless-corner"
+    d = "toothless-corner"
     e = "rounded"
     f = "flat-hook-extended"
-    i = "serifed"
-    j = "flat-hook-serifed"
-    k = "curly"
-    m = "earless-rounded-double-arch-tailed"
-    n = "earless-corner-tailed"
+    g = "earless-corner"
+    i = "serifed-flat-tailed"
+    l = "serifed-flat-tailed"
+    m = "earless-corner-double-arch"
+    n = "earless-corner-straight"
     p = "earless-corner"
     q = "earless-corner"
-    u = "tailed"
-    y = "curly-turn"
+    r = "earless-corner"
+    u = "toothless-corner"
 
     [buildPlans.iosevka-ot-dz-term-lig.slopes]
     upright = "normal"
