refactor: merge with new master revision update

--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -40,8 +40,8 @@
     capital-gamma = "standard"
     lambda = "curly"
     cyrl-capital-u = "curly"
-    zero = "slashed-oval"
-    # zero = "dotted-oval"
+    # zero = "slashed-oval"
+    zero = "dotted-oval"
     one = "nobase"
     two = "curly-neck"
     four = "closed"
@@ -131,8 +131,8 @@
     capital-gamma = "standard"
     lambda = "curly"
     cyrl-capital-u = "curly"
-    zero = "slashed-oval"
-    # zero = "dotted-oval"
+    # zero = "slashed-oval"
+    zero = "dotted-oval"
     one = "nobase"
     two = "curly-neck"
     four = "closed"
@@ -224,8 +224,8 @@
     capital-gamma = "standard"
     lambda = "curly"
     cyrl-capital-u = "curly"
-    zero = "slashed-oval"
-    # zero = "dotted-oval"
+    # zero = "slashed-oval"
+    zero = "dotted-oval"
     one = "nobase"
     two = "curly-neck"
     four = "closed"
