refactor: forget adding number-sign = "upright-open"

--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -54,7 +54,7 @@
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
-    number-sign = "upright"
+    number-sign = "upright-open"
     ampersand = "upper-open"
     dollar = "open"
     percent = "dots"
@@ -145,7 +145,7 @@
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
-    number-sign = "upright"
+    number-sign = "upright-open"
     ampersand = "upper-open"
     dollar = "open"
     percent = "dots"
@@ -238,7 +238,7 @@
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
-    number-sign = "upright"
+    number-sign = "upright-open"
     ampersand = "upper-open"
     dollar = "open"
     percent = "dots"
