--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -3,6 +3,15 @@
     spacing = "normal"
     serifs = "sans"
     no-ligation = true
+    [buildPlans.iosevka-ot-dz.weights.regular]
+    shape = 400
+    menu = 400
+    css = 400
+
+    [buildPlans.iosevka-ot-dz.weights.bold]
+    shape = 700
+    menu = 700
+    css = 700
 
     [buildPlans.iosevka-ot-dz.variants]
     inherits = "ss20"
@@ -95,6 +104,15 @@
     serifs = "sans"
     no-ligation = true
 
+    [buildPlans.iosevka-ot-dz-mono.weights.regular]
+    shape = 400
+    menu = 400
+    css = 400
+
+    [buildPlans.iosevka-ot-dz-mono.weights.bold]
+    shape = 700
+    menu = 700
+    css = 700
     [buildPlans.iosevka-ot-dz-mono.variants]
     inherits = "ss20"
 
@@ -185,6 +203,15 @@
     spacing = "term"
     serifs = "sans"
 
+    [buildPlans.iosevka-ot-dz-term-lig.weights.regular]
+    shape = 400
+    menu = 400
+    css = 400
+
+    [buildPlans.iosevka-ot-dz-term-lig.weights.bold]
+    shape = 700
+    menu = 700
+    css = 700
     [buildPlans.iosevka-ot-dz-term-lig.ligations]
     inherits = "dlig"
 
