feat: configure open cent and curly 7

--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -49,13 +49,13 @@
     capital-gamma = "standard"
     lambda = "curly"
     cyrl-capital-u = "curly"
-    # zero = "slashed-oval"
     zero = "dotted-oval"
     one = "nobase"
     two = "curly-neck"
     four = "closed"
     five = "oblique-upper-left-bar"
     six = "closed-contour"
+	seven = "curly-serifless"
     eight = "two-circles"
     nine = "closed-contour"
     tilde = "low"
@@ -66,6 +66,7 @@
     number-sign = "upright-open"
     ampersand = "upper-open"
     dollar = "open"
+	cent = "open"
     percent = "dots"
     bar = "natural-slope"
     lig-ltgteq = "flat"
@@ -149,13 +150,13 @@
     capital-gamma = "standard"
     lambda = "curly"
     cyrl-capital-u = "curly"
-    # zero = "slashed-oval"
     zero = "dotted-oval"
     one = "nobase"
     two = "curly-neck"
     four = "closed"
     five = "oblique-upper-left-bar"
     six = "closed-contour"
+	seven = "curly-serifless"
     eight = "two-circles"
     nine = "closed-contour"
     tilde = "low"
@@ -166,6 +167,7 @@
     number-sign = "upright-open"
     ampersand = "upper-open"
     dollar = "open"
+	cent = "open"
     percent = "dots"
     bar = "natural-slope"
     lig-ltgteq = "flat"
@@ -251,13 +253,13 @@
     capital-gamma = "standard"
     lambda = "curly"
     cyrl-capital-u = "curly"
-    # zero = "slashed-oval"
     zero = "dotted-oval"
     one = "nobase"
     two = "curly-neck"
     four = "closed"
     five = "oblique-upper-left-bar"
     six = "closed-contour"
+	seven = "curly-serifless"
     eight = "two-circles"
     nine = "closed-contour"
     tilde = "low"
@@ -268,6 +270,7 @@
     number-sign = "upright-open"
     ampersand = "upper-open"
     dollar = "open"
+	cent = "open"
     percent = "dots"
     bar = "natural-slope"
     lig-ltgteq = "flat"
