--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -45,9 +45,9 @@
     x = "curly"
     y = "curly"
     z = "curly"
-    turn-v = "curly"
     capital-gamma = "standard"
-    lambda = "curly"
+    turn-v = "curly"
+	lower-lambda = "curly"
     cyrl-capital-u = "curly"
     zero = "dotted-oval"
     one = "nobase"
@@ -146,9 +146,9 @@
     x = "curly"
     y = "curly"
     z = "curly"
-    turn-v = "curly"
     capital-gamma = "standard"
-    lambda = "curly"
+    turn-v = "curly"
+	lower-lambda = "curly"
     cyrl-capital-u = "curly"
     zero = "dotted-oval"
     one = "nobase"
@@ -249,9 +249,9 @@
     x = "curly"
     y = "curly"
     z = "curly"
-    turn-v = "curly"
     capital-gamma = "standard"
-    lambda = "curly"
+    turn-v = "curly"
+	lower-lambda = "curly"
     cyrl-capital-u = "curly"
     zero = "dotted-oval"
     one = "nobase"
