--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -63,7 +63,7 @@
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
-    number-sign = "upright-open"
+    number-sign = "slanted"
     ampersand = "upper-open"
     dollar = "open"
 	cent = "open"
@@ -164,7 +164,7 @@
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
-    number-sign = "upright-open"
+    number-sign = "slanted"
     ampersand = "upper-open"
     dollar = "open"
 	cent = "open"
@@ -267,7 +267,7 @@
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
-    number-sign = "upright-open"
+    number-sign = "slanted"
     ampersand = "upper-open"
     dollar = "open"
 	cent = "open"
