upate to latest iosevka version

--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -17,12 +17,12 @@
     inherits = "ss20"
 
     [buildPlans.iosevka-ot-dz.variants.design]
-    capital-a = "curly"
-    capital-b = "more-asymmetric-unilateral-motion-serifed"
-    capital-d = "standard-unilateral-motion-serifed"
+    capital-a = "curly-serifless"
+    capital-b = "more-asymmetric-unilateral-serifed"
+    capital-d = "standard-unilateral-serifed"
     capital-g = "toothed-serifless-hooked"
     capital-i = "short-serifed"
-    capital-j = "serifed"
+    capital-j = "flat-hook-serifed"
     capital-k = "curly"
     capital-m = "hanging"
     capital-n = "asymmetric"
@@ -30,8 +30,9 @@
     capital-r = "curly"
     capital-v = "curly"
     capital-w = "curly"
-    capital-x = "curly"
-    capital-y = "curly"
+    capital-x = "curly-serifless"
+    capital-y = "curly-serifless"
+    capital-z = "curly-serifless"
     b = "toothed"
     f = "flat-hook"
     g = "double-storey"
@@ -42,9 +43,9 @@
     u = "toothed"
     v = "curly"
     w = "curly"
-    x = "curly"
+    x = "curly-serifless"
     y = "curly"
-    z = "curly"
+    z = "curly-serifless"
     capital-gamma = "standard"
     turn-v = "curly"
 	lower-lambda = "curly"
@@ -59,7 +60,7 @@
     eight = "two-circles"
     nine = "closed-contour"
     tilde = "low"
-    asterisk = "low"
+    asterisk = "turn-hex-low"
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
@@ -75,7 +76,7 @@
     [buildPlans.iosevka-ot-dz.variants.italic]
     a = "double-storey-toothless-corner"
     b = "toothless-corner"
-    d = "toothless-corner"
+    d = "toothless-corner-serifless"
     e = "rounded"
     f = "flat-hook-extended"
     g = "earless-corner"
@@ -118,12 +119,12 @@
     inherits = "ss20"
 
     [buildPlans.iosevka-ot-dz-mono.variants.design]
-    capital-a = "curly"
-    capital-b = "more-asymmetric-unilateral-motion-serifed"
-    capital-d = "standard-unilateral-motion-serifed"
+    capital-a = "curly-serifless"
+    capital-b = "more-asymmetric-unilateral-serifed"
+    capital-d = "standard-unilateral-serifed"
     capital-g = "toothed-serifless-hooked"
     capital-i = "short-serifed"
-    capital-j = "serifed"
+    capital-j = "flat-hook-serifed"
     capital-k = "curly"
     capital-m = "hanging"
     capital-n = "asymmetric"
@@ -131,8 +132,9 @@
     capital-r = "curly"
     capital-v = "curly"
     capital-w = "curly"
-    capital-x = "curly"
-    capital-y = "curly"
+    capital-x = "curly-serifless"
+    capital-y = "curly-serifless"
+    capital-z = "curly-serifless"
     b = "toothed"
     f = "flat-hook"
     g = "double-storey"
@@ -143,9 +145,9 @@
     u = "toothed"
     v = "curly"
     w = "curly"
-    x = "curly"
+    x = "curly-serifless"
     y = "curly"
-    z = "curly"
+    z = "curly-serifless"
     capital-gamma = "standard"
     turn-v = "curly"
 	lower-lambda = "curly"
@@ -160,7 +162,7 @@
     eight = "two-circles"
     nine = "closed-contour"
     tilde = "low"
-    asterisk = "low"
+    asterisk = "turn-hex-low"
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
@@ -176,7 +178,7 @@
     [buildPlans.iosevka-ot-dz-mono.variants.italic]
     a = "double-storey-toothless-corner"
     b = "toothless-corner"
-    d = "toothless-corner"
+    d = "toothless-corner-serifless"
     e = "rounded"
     f = "flat-hook-extended"
     g = "earless-corner"
@@ -221,12 +223,12 @@
     inherits = "ss20"
 
     [buildPlans.iosevka-ot-dz-term-lig.variants.design]
-    capital-a = "curly"
-    capital-b = "more-asymmetric-unilateral-motion-serifed"
-    capital-d = "standard-unilateral-motion-serifed"
+    capital-a = "curly-serifless"
+    capital-b = "more-asymmetric-unilateral-serifed"
+    capital-d = "standard-unilateral-serifed"
     capital-g = "toothed-serifless-hooked"
     capital-i = "short-serifed"
-    capital-j = "serifed"
+    capital-j = "flat-hook-serifed"
     capital-k = "curly"
     capital-m = "hanging"
     capital-n = "asymmetric"
@@ -234,8 +236,9 @@
     capital-r = "curly"
     capital-v = "curly"
     capital-w = "curly"
-    capital-x = "curly"
-    capital-y = "curly"
+    capital-x = "curly-serifless"
+    capital-y = "curly-serifless"
+    capital-z = "curly-serifless"
     b = "toothed"
     f = "flat-hook"
     g = "double-storey"
@@ -246,9 +249,9 @@
     u = "toothed"
     v = "curly"
     w = "curly"
-    x = "curly"
+    x = "curly-serifless"
     y = "curly"
-    z = "curly"
+    z = "curly-serifless"
     capital-gamma = "standard"
     turn-v = "curly"
 	lower-lambda = "curly"
@@ -263,7 +266,7 @@
     eight = "two-circles"
     nine = "closed-contour"
     tilde = "low"
-    asterisk = "low"
+    asterisk = "turn-hex-low"
     underscore = "high"
     paren = "large-contour"
     brace = "curly"
@@ -279,7 +282,7 @@
     [buildPlans.iosevka-ot-dz-term-lig.variants.italic]
     a = "double-storey-toothless-corner"
     b = "toothless-corner"
-    d = "toothless-corner"
+    d = "toothless-corner-serifless"
     e = "rounded"
     f = "flat-hook-extended"
     g = "earless-corner"
